--- a/form/form.html
+++ b/form/form.html
@@ -7,12 +7,17 @@
         <meta charset="UTF-8">
     </head>
     <body>
-        <h1>
-            this is my first form
-        </h1>
+        <header>
+            <h1>
+                this is my first form
+            </h1>
+        </header>
+        <nav>
         <a href="./index.html">
             back to home
         </a>
+        </nav>
+        <main>
         <form>
             <fieldset>
                 <legend>
@@ -71,5 +76,11 @@
                     </button>
             </fieldset>
         </form>
+        </main>
+        <section></section>
+        <article></article>
+        <footer>
+            all rights reserved
+        </footer>
     </body>
 </html>
