--- a/ninja/ninja.html
+++ b/ninja/ninja.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ENG">
+    <html>
     <head>
         <title>
             ninja project
@@ -30,3 +31,4 @@
         </dev>
         </body>
     </body>
+    </html>
