--- a/ninja/ninja.html
+++ b/ninja/ninja.html
@@ -12,14 +12,14 @@
             ninja
         </h1>
             <img src="./Day 1/pronunciation.png" alt="ninja pronounciation"
-        <dev>
+        <div>
         <p>
             <em>
                 noun
             </em>
         </p>
-        </dev>
-        <dev>
+        </div>
+        <div>
             <ol>
                 <li>
                     A practitoner skilled in the Japanese art of ninjutsu
@@ -28,7 +28,7 @@
                     A programmer who breaks down problems with zen-like focus
                 </li>
             </ol>
-        </dev>
+        </div>
         </body>
     </body>
     </html>
