--- a/registration form/registrationform.html
+++ b/registration form/registrationform.html
@@ -34,7 +34,7 @@
                     <label for="Password">
                         Password: *
                     </label>
-                    <input type="password" name="password" id="password">
+                    <input type="password" name="Password" id="Password">
                 </div>
                 <div>
                     <label for="ComfirmPassword">
@@ -43,7 +43,7 @@
                     <input type="password" name="ComfirmPassword" id="ComfirmPassword">
                 </div>
                 <div>
-                    <label for="birthday">
+                    <label for="Birthday">
                         Birthday:
                     </label>
                     <input type="date" name="Birthday" id="Birthday"> 
@@ -52,6 +52,7 @@
                     <label for="GenderIdentity">
                         Gender Identity: 
                     </label>
+                </div>
                 <div>
                     <input type="radio" name="Genderidentity" id="Genderidentitymale">
                     <label>
@@ -76,8 +77,9 @@
                     </label>
                 </div>
                     <div>
-                    <textarea name="Ashortdescriptionaboutmyself" id="Ashortdescriptionaboutmyself"></textarea>
-                </div>
+                    <textarea name="Ashortdescriptionaboutmyself" id="Ashortdescriptionaboutmyself">
+                    </textarea>
+                    </div>
                 <div>
                     <label for="FavoriteLanguage">
                         Favorite Language:
@@ -93,12 +95,12 @@
                 </div>
                 <div>
                     <input type="checkbox" name="yes,Iwouldliketorecieveperiodicemailupdates">
-                    <label for="yes,Iwouldliketorecieveperiodicemailupdates">
+                    <label for="Yes,Iwouldliketorecieveperiodicemailupdates">
                         Yes, I would like to recieve periodic email updates
                     </label>
                 </div>
                 <div>
-                    <button type="select">
+                    <button type="Select">
                         Create Account
                     </button>
                 </div>
