--- a/plottingourblocks/plottingblocks.html
+++ b/plottingourblocks/plottingblocks.html
@@ -6,16 +6,15 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <div class="container">
+    <div class="container"></div>
         <div class="top-nav"></div>
         <div class="side-nav"></div>
-        <div class="main">
+        <div class="main"></div>
             <div class="sub-content"></div>
             <div class="sub-content"></div>
             <div class="sub-content"></div>
             <div id="advertisement"></div>
-        </div>
-    </div>
+
 </body>
 </html>
 
