--- a/PlottingOurBlocks/PlottingOurBlocks.html
+++ b/PlottingOurBlocks/PlottingOurBlocks.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,15 +5,16 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <div class="container"></div>
+    <div class="container">
         <div class="top-nav"></div>
         <div class="side-nav"></div>
-        <div class="main"></div>
+        <div class="main">
             <div class="sub-content"></div>
             <div class="sub-content"></div>
             <div class="sub-content"></div>
             <div id="advertisement"></div>
-
+        </div>
+    </div>
 </body>
 </html>
 
