--- a/Profile Page/Usercard.html
+++ b/Profile Page/Usercard.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>User Card</title>
-        <meta charset="utf-8">
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="./style.css">
-    </head>
-    <body>
-        <div class="container"></div>
-        
-    </body>
+    <title>User Card</title>
+</head>
+
+<body>
+    <div class="container">
+        <div class="top-nav">
+            <img src="./icons/user-circle.png" alt="circular icon" id="User"></div>
+                <h1> Jane Doe</h1>
+            <div class="header">
+                <img src="./icons/map-marker.png" alt="map marker" id="Marker">
+                    <div class="location">Seattle</div>
+            </div>
+        <div class="Achievements">
+            <div>Developer | Engineer | Problem Solver</div>
+            <div>Master of shadows and the internet!</div>
+            <div class="gear">
+                <img src="./icons/gear.png" alt="gear" id="gear">
+                <span><u>edit profile</u></span>
+            </div>
+        </div>
+    </div>
+</body>
 </html>
