--- a/Likes/likes.html
+++ b/Likes/likes.html
@@ -30,7 +30,7 @@
                 <h4>Neil M</h4>
                     <div class="likes">
                         <p><span class="amountoflikes"> 0 </span> like(s)</p>
-                            <div><button class="button" onclick="liked(this)">Like</button></div>
+                            <button class="button" onclick="liked(this)">Like</button>
                     </div>
             </div>
                 <div>
@@ -44,10 +44,7 @@
                 <h4>Nichole K</h4>
                 <div class="likes">
                     <p><span class="amountoflikes">0</span> like(s)</p>
-                        <div><button class="button" onclick="liked(this)">
-                            Like
-                            </button>
-                        </div>
+                        <button class="button" onclick="liked(this)">Like</button>
                 </div>
             </div>
                 <div>
@@ -61,10 +58,7 @@
                 <h4>Jim R</h4>
                 <div class="likes">
                     <p><span class="amountoflikes">0</span> like(s)</p>
-                        <div><button class="button" onclick="liked(this)">
-                            Like
-                            </button>
-                        </div>
+                        <button class="button" onclick="liked(this)">Like</button>
                 </div>
             </div>
                 <div>
