--- a/Profile Page/Profile.html
+++ b/Profile Page/Profile.html
@@ -21,68 +21,86 @@
 
 
 <body>
-    <div class="container">
-        <div class="top-nav">
-            <img src="./icons for User/user-circle.png" alt="circular icon" id="User">
-                <h1> Jane Doe</h1>
-                <div class="location"><img src="./icons for User/map-marker.png" alt="map marker" id="Marker"> Seattle</div>
-            <ul class="Achievements">
-                <li>Developer | Engineer | Problem Solver</li>
-                <li>Master of shadows and the internet!</li>
-            </ul>
-                <img src="./icons for User/gear.png" alt="gear" class="gear">
-                <u> edit profile</u>
-        </div>
-    </div>
-</body>
-
-<div class="connection request">
-    <div class="content">
-        <h1>Conection Requests</h1>
-        <div class="connection-body">
-            <div class="row">
-                <div class="icon-todd">
-                    <h5>Todd E</h5>
-                </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="icon-phil">
-                    <h5>Phil K</h5>
-                </div>
+    <div class="main">
+        <div class="container">
+            <div class="top-nav">
+                <img src="./icons for User/user-circle.png" alt="circular icon" id="User">
+                    <h1> Jane Doe</h1>
+                    <div class="location"><img src="./icons for User/map-marker.png" alt="map marker" id="Marker"> Seattle</div>
+                <ul class="Achievements">
+                    <li>Developer | Engineer | Problem Solver</li>
+                    <li>Master of shadows and the internet!</li>
+                </ul>
+                    <img src="./icons for User/gear.png" alt="gear" class="gear">
+                    <a href=""> edit profile</a>
             </div>
         </div>
-    </div>
-    <div class="Your-connections">
-        <h1>Your Connections</h1>
-        <div class="connection-body">
-            <div class="row">
-                <div class="icon-adrien">
-                    <h5>Adrien D</h5>
+        <div class="requests">
+                <h2 class="bar">
+                    Connection Requests
+                </h2>
+            <div class="names">
+                <div class="pictures">
+                    <img src="./icons for User/user-circle.png" alt="todd" id="todd">
+                    <div>
+                    <img src="./icons for User/user-circle.png" alt="phil" id="phil">
+                    </div>
                 </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="icon-anne">
-                    <h5>Anne J</h5>
-                </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="icon-alayne">
-                    <h5>Alayne T</h5>
-                </div>
+                <div>
+                <div class="namesforpictures">
+                    <h2 class="toddname">Todd E</h2>
+                    <div>
+                    <h2 class="toddname">Phil K</h2>
+                    </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="icon-arry">
-                    <h5>Arry Y</h5>
+            <div id="choice">
+                <div class="choice">
+                    <img src="./icons/accept-circle.png" alt="accept" class="yes">
+                    <img src="./icons/close-circle.png" alt="deny" class="no" >
+                </div>
+                <div class="philchoice">
+                    <img src="./icons/accept-circle.png" alt="accept" class="yes1"> 
+                    <img src="./icons/close-circle.png" alt="deny" class="no1">
+                </div>
                 </div>
                 </div>
             </div>
         </div>
+        <div class="added">
+            <h2 class="bar">
+                Your Connections
+            </h2>
+            <div id="friends">
+                <div class="friends">
+                    <img src="./icons for User/user-circle.png" alt="adrien" id="adrien">
+                    <div>
+                    <img src="./icons for User/user-circle.png" alt="anne" id="anne">
+                    </div>
+                    <div>
+                    <img src="./icons for User/user-circle.png" alt="alayne" id="alayne">
+                    </div>
+                    <div>
+                    <img src="./icons for User/user-circle.png" alt="arry" id="arry">
+                    </div>
+                </div>
+                <div class="acceptedfriends">
+                <div class="namesforpictures1">
+                    <h2 class="adrienname">Adrien D</h2>
+                    <div>
+                    <h2 class="annename">Anne J</h2>
+                    </div>
+                    <div>
+                    <h2 class="alayne">Alayne T</h2>
+                    </div>
+                    <div>
+                    <h2 class="arry">Arry Y</h2>
+                    </div>
+                </div>
+                </div>
+            </div>
+        </div>
     </div>
-</div>
 
 </body>
 </html>
