--- a/Profile Page/Profile.html
+++ b/Profile Page/Profile.html
@@ -99,6 +99,18 @@
                 </div>
                 </div>
             </div>
+    </div>
+        <div class="bottom">
+            <div class="education">
+                <span>
+                    Education
+                </span>
+            </div>
+            <div>
+                <p>Coding Dojo - Full Stack Bootcamp</p>
+                <p2>Triple black belt in Python, Mern, and C#</p2>
+            </div>
+        </div>
         </div>
     </div>
 
